--- a/src/app/pages/survey/survey.component.html
+++ b/src/app/pages/survey/survey.component.html
@@ -19,27 +19,61 @@
   <div class="forms_template" nz-col nzSpan="7">
     <h3>Forms templates</h3>
     <div class="option_list" nz-row [nzGutter]="[16, 24]">
-      <div id="option_item" nz-col class="gutter-row" [nzSpan]="8">
+      <div id="option_item" nz-col class="gutter-row" [nzSpan]="6">
         <i nz-icon nzType="form" nzTheme="outline"></i>
         <span class="anticon-class"> New Form </span>
       </div>
-      <div id="option_item" nz-col class="gutter-row" [nzSpan]="8">
+      <div id="option_item" nz-col class="gutter-row" [nzSpan]="6">
         <i nz-icon nzType="idcard" nzTheme="outline"></i>
         <span class="anticon-class"> ID </span>
       </div>
-      <div id="option_item" nz-col class="gutter-row" [nzSpan]="8">
+      <div id="option_item" nz-col class="gutter-row" [nzSpan]="6">
         <i nz-icon nzType="environment" nzTheme="outline"></i>
         <span class="anticon-class"> Address </span>
       </div>
-      <div id="option_item" nz-col class="gutter-row" [nzSpan]="8">
+      <div id="option_item" nz-col class="gutter-row" [nzSpan]="6">
         <i nz-icon nzType="contacts" nzTheme="outline"></i>
         <span class="anticon-class"> Contact </span>
       </div>
-      <div id="option_item" nz-col class="gutter-row" [nzSpan]="8">
+      <div id="option_item" nz-col class="gutter-row" [nzSpan]="6">
+        <i nz-icon nzType="build" nzTheme="outline"></i>
+        <span class="anticon-class"> Skills </span>
+      </div>
+    </div>
+    <h3>Elements</h3>
+    <div class="option_list" nz-row [nzGutter]="[16, 24]">
+      <div id="option_item" nz-col class="gutter-row" [nzSpan]="6">
+        <i nz-icon nzType="form" nzTheme="outline"></i>
+        <span class="anticon-class"> New Form </span>
+      </div>
+      <div id="option_item" nz-col class="gutter-row" [nzSpan]="6">
+        <i nz-icon nzType="idcard" nzTheme="outline"></i>
+        <span class="anticon-class"> ID </span>
+      </div>
+      <div id="option_item" nz-col class="gutter-row" [nzSpan]="6">
+        <i nz-icon nzType="environment" nzTheme="outline"></i>
+        <span class="anticon-class"> Address </span>
+      </div>
+      <div id="option_item" nz-col class="gutter-row" [nzSpan]="6">
+        <i nz-icon nzType="contacts" nzTheme="outline"></i>
+        <span class="anticon-class"> Contact </span>
+      </div>
+      <div id="option_item" nz-col class="gutter-row" [nzSpan]="6">
         <i nz-icon nzType="build" nzTheme="outline"></i>
         <span class="anticon-class"> Skills </span>
       </div>
     </div>
   </div>
-  <div class="form_choose" nz-col nzSpan="10"></div>
+  <div class="form_choose" nz-col nzSpan="10">
+    <div nz-row nzJustify="space-between">
+      <div nz-col nzSpan="6">
+        <h3>Create your survey</h3>
+      </div>
+      <div nz-col nzSpan="6">
+        <button nz-button nzShape="circle">
+          <i nz-icon nzType="plus"></i>
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
