--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,21 @@
     <div class="menu" nz-col nzSpan="4">
       <i nz-icon nzType="menu" nzTheme="outline"></i>
     </div>
-    <div class="account" nz-col nzSpan="6" nzOffset="14">
+    <div class="account" nz-col nzSpan="8" nzOffset="12">
       <div nz-row nzJustify="space-between">
-        <div nz-col nzSpan="6">
-          <img src="assets/icons/notification.png" alt="Notification" />
-        </div>
-        <h3 nz-col nzSpan="6">John Doe</h3>
+        <h3
+          style="color: white; white-space: nowrap"
+          nz-col
+          nzSpan="6"
+          nzOffset="6"
+        >
+          <img
+            style="margin-right: 5px"
+            src="assets/icons/notification.png"
+            alt="Notification"
+          />
+          John Doe
+        </h3>
         <div nz-col nzSpan="6" class="avatar">
           <img src="assets/imgs/avatar.png" alt="Avatar" />
         </div>
