--- a/src/app/pages/survey/survey.component.html
+++ b/src/app/pages/survey/survey.component.html
@@ -66,14 +66,24 @@
   </div>
   <div class="form_choose" nz-col nzSpan="10">
     <div nz-row nzJustify="space-between">
-      <div nz-col nzSpan="6">
-        <h3>Create your survey</h3>
+      <div nz-col nzSpan="8">
+        <h3 style="font-size: 13px; color: #60b237">Create your survey</h3>
       </div>
-      <div nz-col nzSpan="6">
-        <button nz-button nzShape="circle">
-          <i nz-icon nzType="plus"></i>
-        </button>
+      <div nz-col nzSpan="8">
+        <nz-button-group>
+          <button class="cancel" style="border: none" nz-button>Cancel</button>
+          <button
+            class="save"
+            style="background-color: #414042"
+            nz-button
+            nzType="primary"
+          >
+            Save
+            <i nz-icon nzType="save" nzTheme="outline"></i>
+          </button>
+        </nz-button-group>
       </div>
     </div>
+    <div nz-row class="form_view"></div>
   </div>
 </div>
