--- a/src/app/pages/survey/survey.component.scss
+++ b/src/app/pages/survey/survey.component.scss
@@ -73,3 +73,23 @@
     }
   }
 }
+
+.forms_choose {
+  padding-right: 15px;
+  h3 {
+    font-size: 12px;
+    color: #60b237;
+  }
+
+  nz-button-group {
+    .cancel {
+      border: none;
+    }
+    .save {
+      background-color: #414042;
+    }
+  }
+
+  .form_view {
+  }
+}
