--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,12 @@
     <div class="account" nz-col nzSpan="8" nzOffset="12">
       <div nz-row nzJustify="space-between">
         <h3
-          style="color: white; white-space: nowrap"
+          style="
+            color: white;
+            white-space: nowrap;
+            font-size: 1.17em;
+            line-height: 4;
+          "
           nz-col
           nzSpan="6"
           nzOffset="6"
