--- a/src/app/pages/survey/survey.component.scss
+++ b/src/app/pages/survey/survey.component.scss
@@ -12,9 +12,9 @@
   .list_header {
     margin-bottom: 10px;
     justify-content: space-between;
-    h3,
-    button {
-      display: inline-block;
+
+    h3 {
+      font-size: 1.17em;
     }
 
     button {
@@ -37,10 +37,56 @@
   .ant-input-affix-wrapper > input.ant-input {
     background: #f5f5f5;
   }
+
+  section {
+    padding: 25px 15px;
+
+    .item {
+      margin-bottom: 25px;
+
+      .picture {
+        height: 40px;
+        width: 40px;
+        display: block;
+        float: left;
+        background-color: #f5f5f5;
+        border-radius: 25px;
+        margin-right: 10px;
+
+        img {
+          margin: 0 auto;
+          display: flex;
+          margin-top: 10px;
+          width: 13px;
+        }
+      }
+
+      .item_detail {
+        float: right;
+        h3 {
+          font-size: 14px;
+          margin: 0;
+          a {
+            color: #414042;
+          }
+        }
+        span {
+          color: #49453dbf;
+          font-weight: normal;
+          font-size: 12px;
+        }
+      }
+    }
+  }
 }
 
 .forms_template {
   padding: 0 15px;
+
+  h3 {
+    font-size: 1.17em;
+    font-weight: 600;
+  }
 
   .ant-col-8 {
     max-width: 100%;
@@ -74,19 +120,22 @@
   }
 }
 
-.forms_choose {
-  padding-right: 15px;
-  h3 {
-    font-size: 12px;
-    color: #60b237;
-  }
-
-  nz-button-group {
-    .cancel {
+.form_choose {
+  padding: 10px;
+  .form_header {
+    justify-content: space-between;
+    align-items: baseline;
+    h3 {
+      font-size: 12px;
+      color: #60b237;
+    }
+    button {
       border: none;
+      border-radius: 4px;
     }
     .save {
       background-color: #414042;
+      color: #ffffff;
     }
   }
 
