--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~ng-zorro-antd/ng-zorro-antd.min.css";
 
 @font-face {
