--- a/src/app/pages/survey/survey.component.scss
+++ b/src/app/pages/survey/survey.component.scss
@@ -140,5 +140,22 @@
   }
 
   .form_view {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+    padding: 15px;
+
+    .row .col-8 {
+      background-color: #fff;
+      border-radius: 10px;
+      padding: 8px;
+
+      hr {
+        border: 1px solid #414042;
+      }
+      input {
+        border: none;
+        margin-bottom: 10px;
+      }
+    }
   }
 }
