--- a/src/app/pages/survey/survey.component.scss
+++ b/src/app/pages/survey/survey.component.scss
@@ -142,19 +142,26 @@
   .form_view {
     background-color: #f5f5f5;
     border-radius: 10px;
-    padding: 15px;
+    margin-top: 20px;
 
     .row .col-8 {
       background-color: #fff;
       border-radius: 10px;
+      margin: 20px;
       padding: 8px;
 
-      hr {
-        border: 1px solid #414042;
-      }
       input {
+        outline: none;
+        box-shadow: none;
         border: none;
-        margin-bottom: 10px;
+        border-bottom: 1px solid #49453d77;
+        margin: 0 0 15px 0;
+        font-weight: 600;
+      }
+      textarea {
+        box-shadow: none;
+        border: 1px solid #414042;
+        background-color: #f5f5f5;
       }
     }
   }
