--- a/src/app/pages/survey/survey.component.scss
+++ b/src/app/pages/survey/survey.component.scss
@@ -143,10 +143,14 @@
     background-color: #f5f5f5;
     border-radius: 10px;
     margin-top: 20px;
+    padding: 0 15px;
 
-    .row .col-8 {
-      background-color: #fff;
-      border-radius: 10px;
+    .row .col-9 {
+      background-color: #ffffff;
+      border: 1px solid #ffffff;
+      box-sizing: border-box;
+      box-shadow: 0px 0px 2.07477px rgba(0, 0, 0, 0.15);
+      border-radius: 5.18692px;
       margin: 20px;
       padding: 8px;
 
@@ -162,6 +166,27 @@
         box-shadow: none;
         border: 1px solid #414042;
         background-color: #f5f5f5;
+      }
+    }
+
+    .row .col-1 {
+      background-color: #fff;
+      border-radius: 10px;
+      padding: 8px;
+      margin: 20px;
+
+      ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        li {
+          margin: 0;
+          padding: 0;
+          text-align: center;
+          font-size: 20px;
+          color: rgba(0, 0, 0, 0.6);
+          cursor: pointer;
+        }
       }
     }
   }
