--- a/src/app/pages/survey/survey.component.html
+++ b/src/app/pages/survey/survey.component.html
@@ -185,6 +185,12 @@
               nzType="dash"
               nzTheme="outline"
             ></i>
+            <nz-radio-group style="width: 100%">
+              <label nz-radio nzValue="A">Option A</label>
+              <label nz-radio nzValue="B">Option B</label>
+              <label nz-radio nzValue="C">Option C</label>
+            </nz-radio-group>
+            <span>Quiz 3</span>
             <textarea
               nz-input
               [nzAutosize]="{ minRows: 3, maxRows: 5 }"
