--- a/src/app/pages/survey/survey.component.scss
+++ b/src/app/pages/survey/survey.component.scss
@@ -154,6 +154,10 @@
       margin: 20px;
       padding: 8px;
 
+      span {
+        margin-bottom: 10px;
+      }
+
       input {
         outline: none;
         box-shadow: none;
@@ -166,6 +170,11 @@
         box-shadow: none;
         border: 1px solid #414042;
         background-color: #f5f5f5;
+      }
+      [nz-radio] {
+        display: block;
+        height: 32px;
+        line-height: 32px;
       }
     }
 
