--- a/src/app/pages/survey/survey.component.scss
+++ b/src/app/pages/survey/survey.component.scss
@@ -154,7 +154,7 @@
       margin: 20px;
       padding: 8px;
 
-      span {
+      nz-radio-group {
         margin-bottom: 10px;
       }
 
@@ -172,6 +172,7 @@
         background-color: #f5f5f5;
       }
       [nz-radio] {
+        color: #414042;
         display: block;
         height: 32px;
         line-height: 32px;
