--- a/src/app/pages/survey/survey.component.html
+++ b/src/app/pages/survey/survey.component.html
@@ -136,7 +136,7 @@
         <h3>Create your survey</h3>
         <nz-button-group>
           <button class="cancel" style="border: none" nz-button>Cancel</button>
-          <button class="save" nz-button>
+          <button class="save" (click)="showModalTop()" nz-button>
             <i nz-icon nzType="save" nzTheme="outline"></i>
             Save
           </button>
@@ -216,4 +216,20 @@
       </div>
     </div>
   </div>
+</div>
+
+<div nz-row>
+  <div nz-col nzXs="2" nzSm="4" nzMd="6" nzLg="8" nzXl="10">Col 1</div>
+  <div nz-col nzXs="20" nzSm="16" nzMd="12" nzLg="8" nzXl="4">Col 2</div>
+  <div nz-col nzXs="2" nzSm="4" nzMd="6" nzLg="8" nzXl="10">Col 3</div>
+
+  <nz-modal
+    [nzStyle]="{ top: '20px' }"
+    nzWidth="80%"
+    [(nzVisible)]="isVisibleTop"
+  >
+    <ng-container *nzModalContent>
+      <div nz-row></div>
+    </ng-container>
+  </nz-modal>
 </div>
